// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourseCard > renders Featured as expected 1`] = `
<div>
  <div
    class="p-[3px]"
  >
    <a
      class="course-card course-card--featured card flex flex-col items-start transition-transform duration-200 hover:scale-[1.01] hover:container-elevated container-lined p-6 max-w-[656px]"
    >
      <div
        class="course-card__content block md:flex gap-space-between w-full"
      >
        <div
          class="course-card__text"
        >
          <p
            class="course-card__featured-label uppercase font-[650] text-xs mb-3"
          >
            Featured course
          </p>
          <h3
            class="course-card__title mb-6"
          >
            Title
          </h3>
          <button
            class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--primary bg-bluedot-normal link-on-dark course-card__cta mb-6 px-6"
            data-testid="cta-button"
            type="button"
          >
            <span
              class="cta-button__text"
            >
              Apply now
            </span>
          </button>
          <p
            class="course-card__subtitle text-sm overflow-hidden text-bluedot-black text-ellipsis mb-6"
          >
            Description
          </p>
        </div>
        <div
          class="course-card__image-container flex-shrink-0 md:max-w-[60%] w-full mb-6"
        >
          <img
            alt="Title"
            class="course-card__image size-full md:w-[319px] object-cover"
            src="/images/courses/course.jpg"
          />
        </div>
      </div>
      <div
        class="course-card__footer flex justify-between w-full"
      >
        <p
          class="course-card__footer-left text-left text-xs text-bluedot-black"
        >
          <span
            class="course-card__length font-medium"
          >
            5 days
          </span>
        </p>
        <span
          class="tag container-lined inline-flex items-center px-4 py-2 text-xs font-semibold text-color-secondary-text course-card__type"
          role="status"
        >
          Crash course
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`CourseCard > renders default as expected 1`] = `
<div>
  <div
    class="p-[2px]"
  >
    <a
      class="card flex flex-col items-start transition-transform duration-200 hover:scale-[1.01] course-card course-card--regular container-lined p-5 flex flex-col w-[323px] h-[466px] hover:container-elevated"
    >
      <div
        class="card__image-container w-full mb-3"
      >
        <img
          alt="Title"
          class="card__image w-full max-h-full object-cover rounded-radius-md course-card__image w-full h-[165px] object-cover rounded-none"
          src="/images/courses/course.jpg"
        />
      </div>
      <div
        class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
      >
        <div
          class="card__text"
        >
          <p
            class="card__title subtitle-sm mb-1"
          >
            Title
          </p>
          <p
            class="card__subtitle flex-grow overflow-hidden text-ellipsis line-clamp-4 max-h-[96px]"
          >
            Description
          </p>
        </div>
        <div
          class="card__bottom-section mt-auto flex flex-col gap-space-between"
        >
          <div
            class="card__footer flex items-center justify-between w-full"
          >
            <div
              class="course-card__footer flex justify-between w-full"
            >
              <p
                class="course-card__footer-left text-left text-xs text-bluedot-black"
              >
                <span
                  class="course-card__length font-medium"
                >
                  5 days
                </span>
              </p>
              <span
                class="tag container-lined inline-flex items-center px-4 py-2 text-xs font-semibold text-color-secondary-text course-card__type"
                role="status"
              >
                Crash course
              </span>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`CourseCard > renders with optional args 1`] = `
<span
  class="course-card__length font-medium"
>
  12 weeks
</span>
`;

exports[`CourseCard > renders with optional args 2`] = `
<img
  alt="Title"
  class="card__image w-full max-h-full object-cover rounded-radius-md course-card__image w-full h-[165px] object-cover rounded-none"
  src="/images/team/custom-size.jpg"
/>
`;
